tests/ui/contracts/error/item-is-not-a-function.rs
use hyper_tracing_attributes::contracts;

#[contracts]
struct S;

fn main() {}
